--- a/Arkanoid/Arkanoid/mainwindow.ui
+++ b/Arkanoid/Arkanoid/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string/>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QGraphicsView" name="graphicsView">
@@ -49,7 +49,6 @@
      <string>Game</string>
     </property>
     <addaction name="actionNew_game"/>
-    <addaction name="actionQuit"/>
    </widget>
    <addaction name="menuGame"/>
   </widget>
@@ -61,7 +60,6 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionNew_game">
    <property name="checkable">
     <bool>false</bool>
